# LibSphinx5prealpha

./: CMakeLists.txt  LICENSE  README.md
cmake/: config.cmake.in
include/pocketsphinx/include/: cmdln_macro.h  pocketsphinx.h  pocketsphinx_export.h  ps_lattice.h  ps_mllr.h  ps_search.h
include/sphinxbase/include/: ad.h
include/sphinxbase/include/android/: config.h  sphinx_config.h
include/sphinxbase/include/sphinxbase/: agc.h  bio.h  bitarr.h  bitvec.h  byteorder.h  case.h  ckd_alloc.h  clapack_lite.h  cmd_ln.h  cmn.h  err.h  f2c.h  fe.h  feat.h  filename.h  fixpoint.h  fsg_model.h  genrand.h  glist.h  hash_table.h  heap.h  jsgf.h  listelem_alloc.h  logmath.h  matrix.h  mmio.h  ngram_model.h  pio.h  prim_type.h  priority_queue.h  profile.h  sbthread.h  sphinxbase_export.h  strfuncs.h  yin.h
include/sphinxbase/include/win32/: config.h
include/sphinxbase/include/wince/: assert.h  errno.h
lib/: libpocketsphinx5prealpha.lib  libsphinxbase5prealpha.lib
